<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/felt_green"
    android:padding="8dp"
    android:baselineAligned="false"
    tools:context="com.example.android.blackjack.BlackJack">

    <!-- buttons -->
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/dealButton"
            style="@style/playButton"
            android:onClick="deal"
            android:text="@string/deal" />

        <Button
            android:id="@+id/hitButton"
            style="@style/playButton"
            android:onClick="hit"
            android:text="@string/hit" />

        <Button
            android:id="@+id/standButton"
            style="@style/playButton"
            android:onClick="stand"
            android:text="@string/stand" />

        <Button
            android:id="@+id/doubleDownButton"
            style="@style/playButton"
            android:onClick="doubleDown"
            android:text="@string/doubleDown" />
    </LinearLayout>

    <!-- total, bet, show total -->
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <!-- total cash -->
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/playerCashTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/infoText"
                android:textStyle="bold"
                android:text="@string/total" />

            <TextView
                android:id="@+id/playerCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/infoText"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:text="@string/cash" />
        </LinearLayout>

        <!-- bet amount -->
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/playerBetTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/infoText"
                android:textStyle="bold"
                android:text="@string/bet" />

            <TextView
                android:id="@+id/playerBet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/infoText"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:text="@string/betNum" />
        </LinearLayout>

        <!-- bet amount buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/incBetButton"
                android:layout_width="@dimen/betButtonWidth"
                android:layout_height="@dimen/betButtonHeight"
                android:layout_margin="8dp"
                android:textSize="@dimen/buttonText"
                android:onClick="increment"
                android:background="@drawable/my_button_bg"
                android:padding="2dp"
                android:text="+" />

            <Button
                android:id="@+id/decBetButton"
                android:layout_width="@dimen/betButtonWidth"
                android:layout_height="@dimen/betButtonHeight"
                android:layout_margin="8dp"
                android:textSize="@dimen/buttonText"
                android:onClick="decrement"
                android:background="@drawable/my_button_bg"
                android:padding="2dp"
                android:text="-" />
        </LinearLayout>

        <!-- settings -->
        <CheckBox
            android:id="@+id/showCardTotalsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/showCardTotals"
            android:textSize="@dimen/infoText"
            android:layout_marginBottom="8dp"
            android:onClick="toggleShowCardTotals"
            android:paddingLeft="12dp"/>

        <CheckBox
            android:id="@+id/playSoundsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/playSound"
            android:textSize="@dimen/infoText"
            android:layout_marginBottom="8dp"
            android:onClick="togglePlaySounds"
            android:paddingLeft="12dp"/>

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/settings" />
    </LinearLayout>

    <!-- cards -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <!-- first line of dealer cards -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/dealerCard4"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard3"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard2"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard1"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard0"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <!--
               Ok, we are fudging the dealer cards here a little bit in order to make
               room for the dealer card total next to the dealer cards.  Technically
               we need to support 12 cards for player and dealer since you can get 12
               cards without busting.  But the odds of that happening are extremely
               small, so what I did is, I kept the 12th card image slot, but moved it
               to where I want the dealer card total (to the right of the dealer's
               first two cards, and changed it's width to 0.  So the dealer can
               be dealt 12 cards, it's just that the twelfth card will no be displayed.
               I can live with that for now.  Added same for player cards.
           -->
            <ImageView
                android:id="@+id/dealerCard11"
                android:contentDescription="@string/dealerCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:src="@drawable/green_card" />

            <!-- dealer card total -->
            <TextView
                android:id="@+id/dealerCardTotalText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/cardTotalText"
                android:fontFamily="serif"
                android:text="" />
        </LinearLayout>

        <!-- "dealer" tag -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="94dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/playerTagText"
            android:fontFamily="serif"
            android:gravity="end"
            android:text="@string/dealer" />

        <!-- second line of dealer cards -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/dealerCard10"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <!-- Results -->
            <!-- This lyout will get dynamically expanded at the end of a hand to show
                 the results text.
             -->
            <LinearLayout
                android:id="@+id/resultsLayout"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/resultsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/bj_red"
                    android:textSize="@dimen/resultsText"
                    android:textStyle="bold"
                    android:text="" />
            </LinearLayout>

            <ImageView
                android:id="@+id/dealerCard9"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard8"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard7"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard6"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/dealerCard5"
                style="@style/cardImage"
                android:contentDescription="@string/dealerCard"
                android:src="@drawable/green_card" />
        </LinearLayout>

        <!-- first line of player cards -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <!--
               Ok, we are fudging the player cards here a little bit in order to make
               room for the player card total next to the player cards.  Technically
               we need to support 12 cards for player and dealer since you can get 12
               cards without busting.  But the odds of that happening are extremely
               small, so what I did is, I kept the 12th card image slot, but moved it
               to where I want the player card total (to the left of the player's
               first two cards, and changed it's width to 0.  So the player can
               be dealt 12 cards, it's just that the twelfth card will no be displayed.
               I can live with that for now.  Added same for dealer cards.
           -->
            <ImageView
                android:id="@+id/playerCard11"
                android:contentDescription="@string/playerCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:src="@drawable/green_card" />

            <!-- player card total -->
            <TextView
                android:id="@+id/playerCardTotalText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="right"
                android:textColor="@android:color/white"
                android:textSize="@dimen/cardTotalText"
                android:fontFamily="serif"
                android:text="" />

            <ImageView
                android:id="@+id/playerCard0"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard1"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard2"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard3"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard4"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard5"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

        </LinearLayout>

        <!-- "player" tag -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:paddingLeft="80dp"
            android:textSize="@dimen/playerTagText"
            android:fontFamily="serif"
            android:text="@string/player" />

        <!-- second line of player cards -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/playerCard6"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard7"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard8"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard9"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />

            <ImageView
                android:id="@+id/playerCard10"
                style="@style/cardImage"
                android:contentDescription="@string/playerCard"
                android:src="@drawable/green_card" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>